# ascii-render-machine

./: .gitignore  README.md  pyproject.toml
examples/: generate_sample.py
src/ascii_render_machine/: __init__.py  __main__.py  charset.py  cli.py  encoder.py  matcher.py  renderer.py  sampler.py  types.py  video.py
tests/: test_encoder.py  test_matcher.py  test_sampler.py
